Adding password generation.